--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="https://shankpandey.github.io/happy-birthday/" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/560f4f91-37fe-4450-8b5d-64cd0d69d831.jpg/" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
