--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span data-node-name="greeting">Hey</span>
         <span data-node-name="name">Lydia</span>
       </h1>
-      <p class="two" data-node-name="greetingText">I really like your name btw!</p>
+      <p class="two" data-node-name="greetingText">I really like your cheeks!</p>
     </div>
     <div class="three">
       <p data-node-name="text1">It's your birthday!!! :D</p>
@@ -37,7 +37,7 @@
         <strong data-node-name="text4Adjective">special</strong>.</p>
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
-        <span data-node-name="text5Content">You are Special</span>
+        <span data-node-name="text5Content">You are Special ❣</span>
         <span class="smiley" data-node-name="smiley">:)</span>
       </p>
       <p class="idea-6">
